fixed castRays in BlackBoard